// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cards/> Deveria renderizar na tela um container com cards ao injetar os personagens 1`] = `
<div>
  <section
    class="sc-gZGWnS eTVhLD"
    data-testid="id-cards-container"
  >
    <div
      data-testid="id-cards-content"
    >
      <div
        class="sc-kvAqsT efdGIg"
        data-testid="id-card-container"
      >
        <h2
          class="sc-cdtKKh hnyVce"
          data-testid="id-typograph-name-content"
        >
          3-D Man
        </h2>
        <img
          alt="Imagem do personagem 3-D Man"
          class="sc-grJzXs cqACap"
          data-testid="id-img-content"
          src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
        />
      </div>
    </div>
    <div
      data-testid="id-cards-content"
    >
      <div
        class="sc-kvAqsT efdGIg"
        data-testid="id-card-container"
      >
        <h2
          class="sc-cdtKKh hnyVce"
          data-testid="id-typograph-name-content"
        >
          Hulk
        </h2>
        <img
          alt="Imagem do personagem Hulk"
          class="sc-grJzXs cqACap"
          data-testid="id-img-content"
          src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
        />
      </div>
    </div>
  </section>
  <div
    class="sc-cLrhaH kYOzDC"
  >
    <button
      class="sc-jWWaec frwRuj"
    >
      Adicionar Mais
    </button>
  </div>
</div>
`;

exports[`<Cards/> Deveria renderizar na tela um container dos Cards 1`] = `
<div>
  <section
    class="sc-gZGWnS eTVhLD"
    data-testid="id-cards-container"
  />
  <div
    class="sc-cLrhaH kYOzDC"
  >
    <button
      class="sc-jWWaec frwRuj"
    >
      Adicionar Mais
    </button>
  </div>
</div>
`;
